[package]
name = "pdq"
version = "0.1.0"
edition = "2021"
authors = ["Pez Cuckow <email@pezcuckow.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.2" }
pdqhash = { git = "https://github.com/fetlife/pdqhash", package = "pdqhash" }
image = "0.25"
hex = "0.4"

[build-dependencies]
rb-sys-env = "0.2.2"